samples/_failures_safe/1761440775_1a127d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_faf98747.c: In function ‘tokenize’:
./samples/SAFE/__tmp_faf98747.c:164:13: error: expected expression at end of input
  164 |             advance =
      |             ^~~~~~~
./samples/SAFE/__tmp_faf98747.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_faf98747.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_faf98747.c:164:13: error: expected declaration or statement at end of input
